--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -44,6 +44,20 @@
       <artifactId>jackson-module-kotlin</artifactId>
       <version>2.15.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.11.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20230618</version>
+    </dependency>
+
   </dependencies>
 
   <build>
